# ALARA

./: .buildinfo  .gitignore  AUTHORS  AUTHORS.rst  CMakeLists.txt  COPYING  ChangeLog  DEVEL_NOTES  INSTALL  LICENSE  Makefile.am  Makefile.h  NEWS  NEWS.html  README  README.rst  THANKS  TODO  aboutdata.html  config.h.in  configure.ac  doc.Makefile  doc.makefile  features.html  fusion_irr_hist.md  genindex.html  index.html  installguide.html  objects.inv  search.html  searchindex.js  whatsnew.html
data/: Buildup_Parameter  CMakeLists.txt  Data_list.txt  EU.clearance.2000.Bq_kg  EU.clearance.old.Bq_kg  FetterC_hi.Ci_m3.wdr  FetterC_lo.Ci_m3.wdr  GFunction  IAEA.clearance.2004.Bq_kg  IAEA.clearance.old.Bq_kg  Makefile.am  NRC.clearance.concrete.2003.Bq_kg  NRC.clearance.copper.2003.Bq_kg  NRC.clearance.old.Bq_kg  NRC.clearance.steel.2003.Bq_kg  NRCA.Ci_m3.wdr  NRCC.Ci_m3.wdr  elelib.std  elelib_to_matlib.txt  matlib.sample  nuclib.std
data/DataLib/: ALARALib.C  ALARALib.h  ALARALib_def.h  ASCIILib.h  DataLib.C  DaugItem.C  DecayEndf6.h  EndfIeaf.cpp  EndfIeaf.h  ExDecayMode.h  ExFileOpen.h  FEINDLib.C  IEAFLib.h  Makefile.am  ParItem.C  Parent.cpp  Parent.h  RamLib.cpp
doc/: ALARA_Intro.html  Introset.html  Makefile.am  Manual_syntax.html  Manual_syntax.rst  NEWS.rst  README.rst  aboutdata.rst  commandtext.rst  conf.py  credittext.rst  errortext.rst  features.rst  index.rst  inputtext.html  inputtext.rst  installguide.rst  introtext.html  introtext.rst  outputtext.html  outputtext.rst  side.html  sidebar.html  support.rst
doc/usersguide/: Makefile.am  Manual_syntax.rst  commandtext.htlm  commandtext.rst  credittext.html  credittext.rst  errortext.html  errortext.rst  glossarytext.html  glossarytext.rst  index.rst  inputtext.html  inputtext.rst  introtext.rst  outputtext.rst  support.html  support.rst
sample/: CMakeLists.txt  Makefile.am  diff_output.sh  mult_top_sched  readme.md  run_samples.sh  sample1  sample10  sample11  sample12  sample13  sample2  sample3  sample4  sample5  sample6  sample7  sample8  sample9
sample/data/: ANS6_4_3  Makefile.am  adjfile2.gam  fendlg-2.0_175  fluxin3  fluxin_zeros  hohlflux  myElelib  sampleMatlib  truncated_fendld-2.0_for_samples_only
sample/output_ref/: mult_top_sched.out  sample1.out  sample10.out  sample10.tree  sample11.out  sample11.tree  sample12.out  sample12.tree  sample13.out  sample2.out  sample3.out  sample3.tree  sample4.out  sample4.tree  sample5.out  sample5.tree  sample6.out  sample7.out  sample7.tree  sample8.out  sample8.tree  sample9.out  sample9.photonSrc  sample9.photonSrc_int
sample/ref_out/: sample1.out  sample2.out  sample2.tree  sample3.out  sample3.tree  sample4.out  sample4.tree  sample5.out  sample5.photonSrc  sample5.tree  sample6.out  sample7.out  sample7.tree  sample8.out  sample8.tree  sample9.out  sample9.tree
src/: CMakeLists.txt  Chain.C  Component.C  Component.h  CoolingTime.C  CoolingTime.h  Dimension.C  Dimension.h  Flux.C  Flux.h  GammaSrc.C  GammaSrc.h  Geometry.C  Geometry.h  History.C  Input.C  Input_def.h  Loading.C  Loading.h  Makefile.am  Matrix.h  MixCompRef.C  Mixture.C  Node.C  Node.h  Norm.C  Norm.h  NuclearData.C  NuclearData.h  OutputFormat.C  OutputFormat.h  Output_def.h  PulseHistory.C  PulseHistory.h  PulseLevel.C  PulseLevel.h  RateCache.C  RateCache.h  Result.C  Result.h  (+38 more)
src/Calc/: Makefile.am  PulseHistory.C  PulseHistory.h  RateCache.C  RateCache.h  VolFlux.C  VolFlux.h  calcSchedule.C  calcSchedule.h  calcScheduleT.C  calcScheduleT.h  topSchedule.C  topSchedule.h  topScheduleT.C  topScheduleT.h
src/Chains/: Chain.C  Chain.h  Makefile.am  MixCompRef.C  Node.C  Node.h  NuclearData.C  NuclearData.h  Root.C  Root.h  TreeInfo.C  TreeInfo.h  truncate.h
src/DataLib/: ADJLib.C  ADJLib.h  ALARAJOY.cpp  ALARAJOY.h  ALARALib.C  ALARALib.h  ASCIILib.C  ASCIILib.h  ASIILib.C  CMakeLists.txt  Cinder.cpp  Cinder.h  Consts.h  DataLib.C  DataLib.h  EAFLib.C  EAFLib.h  Eaf41.h  Elements.h  EndfIeaf.h  ExDecayMode.h  ExEmptyXSec.cpp  ExEmptyXSec.h  ExFileOpen.cpp  ExFormat.h  ExInclude.h  ExInvalidOption.cpp  ExInvalidOption.h  ExXsecSize.cpp  ExXsecSize.h  Exception.cpp  Exception.h  FEIND.cpp  FEIND.h  FEINDLib.h  FENDL3.cpp  FENDL3.h  FeindsNs.h  Fendl32b  Fendl32b.cpp  (+11 more)
src/Input/: Component.C  Component.h  CoolingTime.C  CoolingTime.h  Dimension.C  Dimension.h  Flux.C  Flux.h  Geometry.C  Geometry.h  History.C  History.h  Input.C  Input.h  Input_def.h  Loading.C  Loading.h  Makefile.am  Mixture.C  Mixture.h  Norm.C  Norm.h  PulseLevel.C  PulseLevel.h  Schedule.C  Schedule.h  ScheduleItem.C  ScheduleItem.h  Volume.C  Volume.h  Zone.C  Zone.h  istreamStack.C
src/Output/: DoseResponse.C  DoseResponse.h  GammaSrc.C  GammaSrc.h  Makefile.am  OutputFormat.C  OutputFormat.h  Output_def.h  Result.C  Result.h  ResultList.C  ResultList.h
src/Util/: Makefile.am  Matrix.C  Matrix.h  Statistics.C  Statistics.h  classes.h  debug.C  debug.h  dflt_datadir.h  functions.h  input.C  input_tokens.h  math.C  output.C
tools/: CMakeLists.txt  LICENSE.md  Makefile.am  README.md  alaraWrapper  alara_mesh_out_to_pandas.py  alara_output_parser.py  alara_output_processing.py  average_stride.pl  cache_misses.pl  cache_misses2.pl  dant2alara.C  dant2alara.F  dant2alara.F90  elelib_to_isolib.py  elelib_to_matlib.py  elelib_to_nuclib.py  extract_pathways  extract_pathways.in  plot_irr_hist.py  plot_simple_sched_ph.py  pyproject.toml  rtflux2alara.f  sched_post_processor.py  single_element.py  single_element_notebook.ipynb  single_nuc.py  single_nuc_notebook.ipynb  sortEachShutdownTime.pl  summary  summary.in
tools/ALARAJOYWrapper/: README.md  alarajoy_QA.py  alarajoy_QA_notebook.ipynb  example_xs_plotting_input.yaml  fendl_2vs3.csv  fispact_parser.py  groupr_tools.py  mt_table.csv  njoy_endf_wrapper.f90  njoy_tools.py  preprocess_fendl3.py  pyalara.py  reaction_data.py  tendl_processing.py  test_njoy_tools.py  test_tendl_processing.py  xs_plotting.py
tools/ALARAOutputProcessor/: alara_pandas_postprocessor.py
tools/alara_output_processing/: __init__.py  alara_output_plotting.py  (+1 more)
tools/jALARA/: IO.java  (+12 more)
(+405 files in other folders)
