#$Id: Makefile.am,v 1.5 2003-10-29 09:05:32 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# determine how to implement installation of non-code files ie. docs

# this wild card probably needs to be fixed
dist_doc_DATA = ALARA_Intro.html commandtext.html glossarytext.html		\
	outputtext.html support.html Introset.html credittext.html	\
	inputtext.html side.html Manual_syntax.html errortext.html	\
	introtext.html sidebar.html

