#$Id: Makefile.am,v 1.6 2004-01-29 08:10:25 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# list html files
dist_doc_DATA = ALARA_Intro.html commandtext.html glossarytext.html		\
	outputtext.html support.html Introset.html credittext.html	\
	inputtext.html side.html Manual_syntax.html errortext.html	\
	introtext.html sidebar.html

