#$Id: Makefile.am,v 1.6 2004-01-29 08:10:25 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# list html files
dist_doc_DATA = NEWS.rst \
	index.rst \
	aboutdata.rst \
	features.rst \
	usersguide/commandtext.rst \
	usersguide/introtext.rst \
	usersguide/index.rst \
	usersguide/errortext.rst \
	usersguide/inputtext.rst \
	usersguide/Manual_syntax.rst \
	usersguide/outputtext.rst \
	usersguide/support.rst \
	usersguide/glossarytext.rst \
	usersguide/credittext.rst \
	installguide.rst

