#$Id: Makefile.am,v 1.6 2004-07-23 19:27:10 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# fill in list of sample inputs and outputs here
# sample_DATA = ....

dist_sample_DATA =  sample1              \
                    sample2              \
                    sample3              \
                    sample4              \
                    sample5              \
                    sample6              \
                    sample7              \
                    sample8

check_DATA =        ref_out/sample1.bin \
                    ref_out/sample1.out  \
                    ref_out/sample1.tree \
                    ref_out/sample2.bin  \
                    ref_out/sample2.out  \
                    ref_out/sample2.tree \
                    ref_out/sample3.bin  \
                    ref_out/sample3.out  \
                    ref_out/sample3.tree \
                    ref_out/sample4.bin  \
                    ref_out/sample4.out  \
                    ref_out/sample4.tree \
                    ref_out/sample5.bin  \
                    ref_out/sample5.out  \
                    ref_out/sample5.photonSrc \
                    ref_out/sample5.tree \
                    ref_out/sample6.bin  \
                    ref_out/sample6.out  \
                    ref_out/sample6.tree \
                    ref_out/sample7.bin  \
                    ref_out/sample7.out  \
                    ref_out/sample7.tree 

SUBDIRS = data
