# Process this file with autoconf to produce a configure script.
AC_INIT(ALARA, devel, wilsonp@engr.wisc.edu)
AM_INIT_AUTOMAKE(ALARA, devel)
AC_CONFIG_SRCDIR([alara.C])
AM_CONFIG_HEADER([config.h])

# Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_F77
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET

# Checks for libraries.
# FIXME: Replace `main' with a function in `-lg2c':
# FIXED: PPHW
AC_CHECK_LIB([g2c], [getenv])
# FIXME: Replace `main' with a function in `-lm':
# FIXED: PPHW
AC_CHECK_LIB([m], [sin])

# Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_C_INLINE
AC_STRUCT_TM

# Checks for library functions.
AC_FUNC_ERROR_AT_LINE
AC_FUNC_STRTOD
AC_FUNC_VPRINTF
AC_CHECK_FUNCS([pow strchr strcspn strstr])

AC_CONFIG_FILES([Calc/Makefile
                 Chains/Makefile
                 DataLib/ALARALib/Makefile
                 DataLib/ASCIILib/EAFLib/Makefile
                 DataLib/ASCIILib/IEAFLib/Makefile
                 DataLib/ASCIILib/Makefile
                 DataLib/Makefile
                 Input/Makefile
                 Makefile
                 Output/Makefile
                 Util/Makefile])
AC_OUTPUT
