#$Id: Makefile.am,v 1.1 2004-07-23 19:28:14 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# fill in list of sample inputs and outputs here
# sample_DATA = ....

dist_sampledata_DATA =  adjfile2.gam    \
                    fendld-2.0      \
                    fendlg-2.0_175  \
                    fluxin1         \
                    fluxin2         \
                    fluxin3         \
                    hohlflux        \
                    myElelib        \
                    sampleMatlib  

