#$Id: Makefile.am,v 1.2 2005-01-17 22:09:26 wilsonp Exp $

include $(top_srcdir)/Makefile.h

# fill in list of sample inputs and outputs here
# sample_DATA = ....

dist_sampledata_DATA =  adjfile2.gam    \
                    fendld-2.0      \
                    fendlg-2.0_175  \
                    fluxin1         \
                    fluxin2         \
                    fluxin3         \
                    hohlflux        \
                    myElelib        \
                    sampleMatlib    \
                    ANS6_4_3        \
                    NRCA            \
                    NRCC

