#$Id: Makefile.am,v 1.3 2003-01-08 05:21:53 wilsonp Exp $
noinst_LIBRARIES = libCalc.a

libCalc_a_SOURCES = PulseHistory.C RateCache.C VolFlux.C	\
	calcSchedule.C calcScheduleT.C topSchedule.C topScheduleT.C

noinst_HEADERS = PulseHistory.h RateCache.h VolFlux.h calcSchedule.h	\
	calcScheduleT.h topSchedule.h topScheduleT.h

INCLUDE = -I@top_srcdir@/
