#$Id: Makefile.am,v 1.4 2003-10-22 06:07:02 wilsonp Exp $

AM_CPPFLAGS = -I$(top_srcdir)/src

noinst_LIBRARIES = libCalc.a

libCalc_a_SOURCES = PulseHistory.C RateCache.C VolFlux.C	\
	calcSchedule.C calcScheduleT.C topSchedule.C topScheduleT.C

noinst_HEADERS = PulseHistory.h RateCache.h VolFlux.h calcSchedule.h	\
	calcScheduleT.h topSchedule.h topScheduleT.h
